--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
+    "framer-motion": "^3.7.0",
     "next": "10.0.7",
     "next-pwa": "^5.0.2",
     "polished": "^4.1.1",
@@ -39,8 +40,8 @@
   "devDependencies": {
     "@babel/core": "^7.13.1",
     "@babel/preset-typescript": "^7.13.0",
-    "@storybook/react": "6.1.20",
     "@storybook/addon-essentials": "6.1.20",
+    "@storybook/react": "6.1.20",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@types/jest": "^26.0.19",
