--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "@unform/web": "^2.1.6",
     "axios": "^0.21.1",
     "framer-motion": "^3.7.0",
-    "next": "10.0.7",
-    "next-pwa": "^5.0.2",
-    "polished": "^4.1.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "next": "^12.0.4",
+    "next-pwa": "^5.4.1",
+    "polished": "^4.1.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-icons": "^4.2.0",
     "styled-components": "5.2.1"
   },
